--- a/docker/Caddyfile
+++ b/docker/Caddyfile
@@ -1,6 +1,11 @@
 :80 {
     root * /var/www/public
     encode gzip
-    php_fastcgi 127.0.0.1:9000
-    file_server
+
+    # Route all requests through index.php when the file doesn't exist
+    route {
+        try_files {path} {path}/ /index.php?{query}
+        php_fastcgi 127.0.0.1:9000
+        file_server
+    }
 }
